--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-brands-svg-icons": "^7.2.0",
     "@fortawesome/free-solid-svg-icons": "^7.2.0",
     "@fortawesome/react-fontawesome": "^3.2.0",
+    "@splinetool/react-spline": "^4.1.0",
     "@types/gsap": "^1.20.2",
     "framer-motion": "^12.34.0",
     "gsap": "^3.14.2",
